[tool.poetry]
name = "hns"
version = "0.1.0"
description = ""
authors = ["romaintailhurat <romain.tailhurat@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.0"
beautifulsoup4 = "^4.9.3"
click = "^7.1.2"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
